fix blurry card on select

--- a/src/styles/cards.less
+++ b/src/styles/cards.less
@@ -79,7 +79,9 @@
 input[type=checkbox]:checked + .filterDiv,
 input[type=radio]:checked + .filterDiv {
     box-shadow: 0 0 0 2px #303030, 0 0 8px 8px #ee792b;
-    filter: brightness(120%);
+    /* filter: brightness(120%); filter: blurs text when magnified (hover) */
+    background: #fff;
+    background: linear-gradient(to bottom right, #fff, #ccc, #fff, #ddd, #eee, #fff, #ddd);
 }
 
 .filterDiv3 {
